fix: gap issues on flex and non flex elements

--- a/src/layouts/_columns.scss
+++ b/src/layouts/_columns.scss
@@ -66,8 +66,4 @@
 		// display: inline-block;
 		break-inside: avoid;
 	}
-	&:not([class*="__gapi"]) > :not(br):not(:last-child):not([class*="__mB"]) {
-		// Gaping, Bottom
-		margin-bottom: 2rem;
-	}
 }
